<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cálculo de IMC</string>
    <string name="text_peso">Digite seu peso (Ex: 70Kg)</string>
    <string name="text_altura">Digite sua altura (Ex: 1,70m)</string>
    <string name="imc_Title">IMC</string>
    <string name="btn_calcular">Calcular</string>
    <string name="label_peso">Peso</string>
    <string name="label_Altura">Altura</string>
    <string name="label_idade">Idade</string>
    <string name="text_idade">Digite sua idade</string>
    <string name="title">IMC</string>
    <string name="logo_description">logo IMC</string>
    <string name="text_resultado">Resultado</string>
    <string name="baixoPeso">IMC abaixo do peso</string>
    <string name="baixo_peso">
        Estar abaixo do peso é uma condição em que a pessoa pesa menos do que é considerado adequado para aquela altura, idade e sexo;
        "\n\n"
        Uma pessoa nestas condições pode estar com alguma doença que a está emagrecendo ou sua nutrição não está boa o suficiente.
        "\n\n"
        Para ter um ganho de peso saudável, não se deve comer somente muitos alimentos calóricos e sim priorizar alguns alimentos com
        boa quantidade calórica, mas ricos em nutrientes benéficos e com pouca quantidade de gordura saturada (de origem animal) e gordura
        trans (de industrializados).
        "\n\n"
        - Alimentos ricos em proteína são grandes aliados: dê preferência às carnes magras (alcatra, filé mignon, maminha, fraldinha) , frango e
            principalmente peixes e ovos, além de leite e queijos brancos como ricota e minas;
        "\n\n"
        - Aposte nas gorduras boas: amendoim, nozes, amêndoa, avelã, castanhas, azeite de oliva, linhaça e abacate;
        "\n\n
        Aumente o consumo de pães, bolos, massas, mandioca, batata, milho e cereais (arroz, farinha de trigo, fubá, aveia), lembrando sempre de optar pelas versões integrais;
        "\n\n"
        - Evite alimentos nas versões diet e light, baixo teor de gorduras, calorias reduzidas;
    </string>

    <string name="pesoNormal">IMC Peso normal</string>
    <string name="peso_normal">
        Estar dentro da faixa de peso normal é significa ter um peso considerado adequado para sua altura, idade e sexo,
        de acordo com as faixas do IMC.
        "\n\n"
        Para manter o peso é importante manter uma dieta balanceada (não basta alimentos corretos, mas também quantidades
        corretas) para seu organismo;
        "\n\n"
        - Estabeleça uma rotina alimentar
        "\n\n"
        - Analise os rótulos dos alimentos. Muitas vezes, os alimentos light contêm uma pequena diferença na quantidade
        calórica, que nem compensa a troca
        "\n\n"
        - Praticar atividades físicas de forma regular
        "\n\n"
        - Descanse e durma o suficiente
        "\n\n"
        - Aumentar a ingestão de líquidos no dia (mínimo de 2L de água)

    </string>
    <string name="sobrePeso">IMC Sobrepeso</string>
    <string name="sobre_peso">
        O sobrepeso é uma condição em que a pessoa pesa mais do que é considerado adequado para aquela altura, idade e sexo.
        O sedentarismo e os maus hábitos alimentares levam ao aumento dessa parcela de indivíduos com sobrepeso a cada ano.
        "\n\n"
        O tratamento para o sobrepeso depende de sua causa. Contudo, manter hábitos alimentares saudáveis e praticar atividades físicas são bons aliados contra o excesso de peso.
        "\n\n"
        Os remédios para emagrecer, quando bem indicados e sempre com acompanhamento médico, podem ser úteis dependendo do caso.

    </string>
    <string name="obesidade1">IMC Obesidade 1</string>
    <string name="obesidade_1">
        <b>Obesidade grau 1</b>"\n"
        O tratamento é realizado através de dieta apropriada com avaliação médica em conjunto com a prática de exercícios, desde que o paciente seja avaliado e liberado pelo médico.
        "\n\n"
        Além disso, é preciso que o paciente realize as atividades com o acompanhamento de um profissional de educação física. Em alguns casos avaliados pelo médico, pode-se fazer o uso de remédios para emagrecer para ajudar no controle do peso.
        "\n\n"
        A cirurgia bariátrica também pode ser destinada ao tratamento da obesidade grau 1 que é acompanhada de outras doenças cuja obesidade é um agravante ou doenças associadas ao excesso de gordura corporal.
        "\n\n"
        Pacientes que têm IMC abaixo de 35, sem doenças associadas, devem sem dúvidas tentar o tratamento clínico antes, com chances de conseguir resultados razoáveis.
    </string>
    <string name="obesidade2">IMC Obesidade 2</string>
    <string name="obesidade_2" tools:ignore="Typos">
        <b>Obesidade grau 2</b>"\n"
        Os riscos associados à obesidade de grau II são mais acentuados. Entre eles, estão a esteatose hepática, doenças articulares, hipertensão, diabetes mellitus, síndrome metabólica, cânceres, infarto agudo do miocárdio e acidente vascular cerebral, lembrando que estes dois últimos são as principais causas de morte no Brasil e no mundo.
        "\n\n"
        O tratamento desse quadro é dado através de mudanças no estilo de vida, associado ao tratamento multiprofissional com nutricionista, psicólogo e médico.
        "\n\n"
        No caso da obesidade grau II, o uso de medicações para a perda de peso também é um método que pode ser proposto diante de avaliação e acompanhamento médico

    </string>
    <string name="obesidade3">IMC Obesidade 3</string>
    <string name="obesidade_3">
        <b>Obesidade grau 3</b>"\n"
         Entre as patologias associadas à obesidade grau 3, estão os distúrbios hormonais, cardiopatias, morte súbita, dermatites, osteoporose, hipertensão, hepatopatias e insuficiência venosa. Porém, segundo a Organização Mundial de Saúde (OMS), a obesidade de grau III é a principal causa de morte evitável do mundo.
        "\n\n"
        A associação de reeducação alimentar e atividade física têm melhores resultados a curto e médio prazo, porém, muitas vezes, em pacientes com obesidade grau III, a atividade física acaba sendo bastante restrita, dependendo do grau de excesso de peso e das artropatias associadas.
        "\n\n"
        Nesses casos, esses pacientes podem optar por fazer a cirurgia de redução de estômago para controlar o peso e sair da obesidade. 
        "\n\n"
        A escolha da cirurgia dependerá do quadro do paciente, do grau de obesidade e das doenças relacionadas.
        
    </string>
    
</resources>