<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_imc"
        android:layout_marginTop="20dp"
        android:layout_gravity="top|center"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#9F35AA"
        android:shadowDx="9"
        android:shadowDy="7"
        android:shadowRadius="7"
        android:textColor="@color/white"
        style="@style/title_purple"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_peso"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        style="@style/textStyle" />

    <EditText
        android:id="@+id/pesoEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/purple_200"
        android:foregroundGravity="center_horizontal"
        android:gravity="start"
        android:hint="@string/text_peso"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textPeso" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_Altura"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            style="@style/textStyle"/>

    <EditText
        android:id="@+id/alturaEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/purple_200"
        android:gravity="start"
        android:hint="@string/text_altura"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#757575"
        android:textSize="18sp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_idade"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            style="@style/textStyle"/>

    <EditText
        android:id="@+id/idadeEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/purple_200"
        android:gravity="start"
        android:hint="@string/text_idade"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#757575"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="0dp"
        android:textStyle="bold"
        android:text="@string/btn_calcular"
        android:textColor="@color/white"
        android:backgroundTint="#830E97"
        app:cornerRadius="25dp" />

</LinearLayout>
